// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New Secure message snapshot New Secure message snapshot should match to snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SecureMessageList
    content={
      Object {
        "back": "Back",
      }
    }
    dispatch={[MockFunction]}
    messages={
      Array [
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
        "7",
        "8",
        "9",
        "0",
      ]
    }
    messagesFetched={
      Object {
        "fetching": true,
        "successModal": true,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <LoadingLocalTakeover
        show={undefined}
        title="loading.."
        xs={24}
      >
        <TextBody>
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="1"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="2"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="3"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="4"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="5"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="6"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="7"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="8"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="9"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="0"
          />
        </TextBody>
      </LoadingLocalTakeover>,
      "xs": 24,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <TextBody>
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="1"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="2"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="3"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="4"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="5"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="6"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="7"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="8"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="9"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="0"
          />
        </TextBody>,
        "show": undefined,
        "title": "loading..",
        "xs": 24,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            Array [
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="1"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="2"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="3"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="4"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="5"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="6"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="7"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="8"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="9"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="0"
              />,
            ],
            false,
            false,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "1",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "2",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "3",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "4",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "4",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "5",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "5",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "6",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "6",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "7",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "7",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "8",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "8",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "9",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "9",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "0",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <LoadingLocalTakeover
          show={undefined}
          title="loading.."
          xs={24}
        >
          <TextBody>
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="1"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="2"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="3"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="4"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="5"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="6"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="7"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="8"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="9"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="0"
            />
          </TextBody>
        </LoadingLocalTakeover>,
        "xs": 24,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <TextBody>
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="1"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="2"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="3"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="4"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="5"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="6"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="7"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="8"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="9"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="0"
            />
          </TextBody>,
          "show": undefined,
          "title": "loading..",
          "xs": 24,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              Array [
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="1"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="2"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="3"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="4"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="5"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="6"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="7"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="8"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="9"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="0"
                />,
              ],
              false,
              false,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "1",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "2",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "3",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "4",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "5",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "5",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "6",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "6",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "7",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "7",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "8",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "8",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "9",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "9",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "0",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            false,
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenFourAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`New Secure message snapshot should match to snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SecureMessageList
    activeTab="SENT"
    content={
      Object {
        "back": "Back",
      }
    }
    dispatch={[MockFunction]}
    messages={
      Array [
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
        "7",
        "8",
        "9",
        "0",
      ]
    }
    messagesFetched={
      Object {
        "fetching": false,
        "successModal": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <LoadingLocalTakeover
        show={undefined}
        title="loading.."
        xs={24}
      >
        <TextBody>
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="1"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="2"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="3"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="4"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="5"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="6"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="7"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="8"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="9"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="0"
          />
          <TextStyled
            className="u-padding-top-2"
            size="uist"
          />
        </TextBody>
      </LoadingLocalTakeover>,
      "xs": 24,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <TextBody>
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="1"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="2"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="3"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="4"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="5"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="6"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="7"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="8"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="9"
          />
          <Connect(withRouter(withMessaging))
            content={
              Object {
                "back": "Back",
              }
            }
            listFlag={true}
            message="0"
          />
          <TextStyled
            className="u-padding-top-2"
            size="uist"
          />
        </TextBody>,
        "show": undefined,
        "title": "loading..",
        "xs": 24,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            Array [
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="1"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="2"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="3"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="4"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="5"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="6"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="7"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="8"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="9"
              />,
              <Connect(withRouter(withMessaging))
                content={
                  Object {
                    "back": "Back",
                  }
                }
                listFlag={true}
                message="0"
              />,
            ],
            false,
            <TextStyled
              className="u-padding-top-2"
              size="uist"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "1",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "2",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "3",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "4",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "4",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "5",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "5",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "6",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "6",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "7",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "7",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "8",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "8",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "9",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "9",
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "back": "Back",
              },
              "listFlag": true,
              "message": "0",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": undefined,
              "className": "u-padding-top-2",
              "size": "uist",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <LoadingLocalTakeover
          show={undefined}
          title="loading.."
          xs={24}
        >
          <TextBody>
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="1"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="2"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="3"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="4"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="5"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="6"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="7"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="8"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="9"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="0"
            />
            <TextStyled
              className="u-padding-top-2"
              size="uist"
            />
          </TextBody>
        </LoadingLocalTakeover>,
        "xs": 24,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <TextBody>
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="1"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="2"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="3"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="4"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="5"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="6"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="7"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="8"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="9"
            />
            <Connect(withRouter(withMessaging))
              content={
                Object {
                  "back": "Back",
                }
              }
              listFlag={true}
              message="0"
            />
            <TextStyled
              className="u-padding-top-2"
              size="uist"
            />
          </TextBody>,
          "show": undefined,
          "title": "loading..",
          "xs": 24,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              Array [
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="1"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="2"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="3"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="4"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="5"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="6"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="7"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="8"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="9"
                />,
                <Connect(withRouter(withMessaging))
                  content={
                    Object {
                      "back": "Back",
                    }
                  }
                  listFlag={true}
                  message="0"
                />,
              ],
              false,
              <TextStyled
                className="u-padding-top-2"
                size="uist"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "1",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "2",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "3",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "4",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "5",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "5",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "6",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "6",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "7",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "7",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "8",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "8",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "9",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "9",
              "nodeType": "class",
              "props": Object {
                "content": Object {
                  "back": "Back",
                },
                "listFlag": true,
                "message": "0",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": undefined,
                "className": "u-padding-top-2",
                "size": "uist",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenFourAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
